// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDmSegmentValue(chat, segment) jobs from all kinds og segment 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": null,
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": undefined,
              "text": "Hello",
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": Array [
      Object {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": Object {
                "media": Object {
                  "id": "",
                },
                "type": "media",
              },
              "text": undefined,
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": Array [
      Object {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": Object {
                "media": Object {
                  "id": "",
                },
                "type": "media",
              },
              "text": "World",
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  Object {
    "accomplishRequest": null,
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": null,
    "refreshTarget": null,
    "request": Object {
      "href": "1.1/foo",
      "method": "POST",
      "params": Object {},
    },
    "target": TwitterChat {
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) more continuous media that exceed the limit of a tweet 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "Hello",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "44444",
        "type": "id",
      },
      Object {
        "id": "55555",
        "type": "id",
      },
      Object {
        "id": "66666",
        "type": "id",
      },
      Object {
        "id": "77777",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "88888",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with media, poll and quote tweet 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "poll": Object {
          "duration": 60,
          "options": Array [
            "foo",
            "bar",
          ],
        },
        "text": "Yo",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "quote_tweet_id": "98765",
        "text": "Hi",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "Howdy",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "44444",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with text and media 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "11111",
        "type": "id",
      },
      Object {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "Hello",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "44444",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "Haro",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  Object {
    "accomplishRequest": null,
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "href": "1.1/foo",
      "method": "POST",
      "params": Object {},
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with text longer than the limit tweet 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": "56789",
    },
  },
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": Array [
      Object {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": Object {
      "method": "POST",
      "params": Object {
        "text": "龍龜",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": "56789",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with dm segment 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": Array [
      Object {
        "id": "1234567890",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": Object {
                "media": Object {
                  "id": "",
                },
                "type": "media",
              },
              "text": "Foo!",
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with media segment 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": Array [
      Object {
        "params": Object {
          "media_category": "dm_image",
        },
        "type": "url",
        "url": "http://...",
      },
    ],
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": Object {
                "media": Object {
                  "id": "",
                },
                "type": "media",
              },
              "text": undefined,
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with text segment 1`] = `
Array [
  Object {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": null,
    "refreshTarget": null,
    "request": Object {
      "method": "POST",
      "params": Object {
        "event": Object {
          "message_create": Object {
            "message_data": Object {
              "attachment": undefined,
              "text": "Foo!",
            },
            "target": Object {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;
